# PawalWidget

./: CMakeLists.txt  README.md
src/: PawalWidget.cpp  PawalWidget.h  PawalWidget.ui  main.cpp
